penambahan fungsionalitas apps

--- a/index.html
+++ b/index.html
@@ -21,38 +21,40 @@
     </header>
 
     <main>
-      <div class="input-form">
-        <div class="bill">
-          <label for="bill">bill</label>
-          <input type="number" name="bill" id="bill" >
-        </div>
-  
-        <div class="tip">
-          <div class="tip-label">
-            <h1>select tip %</h1>
+      <form>
+        <div class="input-form">
+          <div class="bill">
+            <label for="bill">bill</label>
+            <input type="number" name="bill" id="bill" placeholder="0" onkeyup="countSplitBill()">
           </div>
-
-          <div class="tip-btn">
-            <input type="radio" name="tip" id="tip1" value="5%" style="display: none;">
-            <label for="tip1">5%</label>
-            <input type="radio" name="tip" id="tip2" value="10%" style="display: none;">
-            <label for="tip2">10%</label>
-            <input type="radio" name="tip" id="tip3" value="15%" style="display: none;">
-            <label for="tip3">15%</label>
-            <input type="radio" name="tip" id="tip4" value="25%" style="display: none;">
-            <label for="tip4">25%</label>
-            <input type="radio" name="tip" id="tip5" value="50%" style="display: none;">
-            <label for="tip5">50%</label>
-            <input type="number" name="custom-tip" id="custom-tip" placeholder="Custom">
+    
+          <div class="tip">
+            <div class="tip-label">
+              <h1>select tip %</h1>
+            </div>
+  
+            <div class="tip-btn">
+              <input type="radio" name="tip" id="tip1" value="5" style="display: none;">
+              <label id="label-tip" for="tip1" onclick="clearCustomTip()">5%</label>
+              <input type="radio" name="tip" id="tip2" value="10" style="display: none;">
+              <label id="label-tip" for="tip2" onclick="clearCustomTip()">10%</label>
+              <input type="radio" name="tip" id="tip3" value="15" style="display: none;">
+              <label id="label-tip" for="tip3" onclick="clearCustomTip()">15%</label>
+              <input type="radio" name="tip" id="tip4" value="25" style="display: none;">
+              <label id="label-tip" for="tip4" onclick="clearCustomTip()">25%</label>
+              <input type="radio" name="tip" id="tip5" value="50" style="display: none;">
+              <label id="label-tip" for="tip5" onclick="clearCustomTip()">50%</label>
+              <input type="number" name="custom-tip" id="custom-tip" placeholder="Custom" onkeyup="changeTip()" value="">
+            </div>
+          </div>
+    
+          <div class="num-people">
+            <label for="num-people">number of people</label>
+            <input type="number" name="num-people" id="num-people" placeholder="0" oninput="countSplitBill()">
+            <span id="error"></span>
           </div>
         </div>
-  
-        <div class="num-people">
-          <label for="num-people">number of people</label>
-          <input type="number" name="num-people" id="num-people">
-          <span id="error"></span>
-        </div>
-      </div>
+      </form>
 
       <div class="show-form">
         <div class="tip-amount">
@@ -61,7 +63,7 @@
             <h2>/ person</h2>
           </div>
           <div class="amount">
-            <p class="amount">$0.00</p>
+            <p class="amount" id="label-tip-amount">$0.00</p>
           </div>
         </div>
 
@@ -71,11 +73,11 @@
             <h2>/ person</h2>
           </div>
           <div class="amount">
-            <p class="amount">$0.00</p>
+            <p class="amount" id="label-total-amount">$0.00</p>
           </div>
         </div>
 
-        <button onclick="countSplitBill()">reset</button>
+        <button type="button" id="reset-btn" disabled onclick="reset()">reset</button>
       </div>
 
     </main>
