--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <section>
     <header>
-      <img src="/images/logo.svg" alt="">
+      <img src="./images/logo.svg" alt="">
     </header>
 
     <main>
